--- a/package.json
+++ b/package.json
@@ -61,14 +61,21 @@
   },
   "dependencies": {
     "@agentclientprotocol/sdk": "^0.14.1",
+    "@ai-sdk/anthropic": "^3.0.46",
+    "@ai-sdk/azure": "^3.0.31",
+    "@ai-sdk/google": "^3.0.30",
+    "@ai-sdk/openai": "^3.0.30",
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "ai": "^6.0.97",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "electron-store": "^11.0.2",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
+    "ollama-ai-provider-v2": "^3.3.1",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.2",
@@ -79,6 +86,7 @@
     "shiki": "^3.22.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
+    "zod": "^4.3.6",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
